# eustagger-lite

./: .etiketatua2  INSTALL  INSTRUCCIONES  IRAKURRI  Makefile.in  TODO  configure.ac  eustagger_lite.cc  eustagger_raw.cc  ixa-pipe-pos-eu.cc  proba_eustagger.txt.etiketatua3
analisitresnak/: Makefile.in  formatua.h  iconv.hpp  prozesatucg3_raw.cc  prozesatumorf_raw.cc  prozesatuseg_raw.cc
aurreprozesua_raw/: Makefile.in  an_lex_raw.cc  an_lex_raw.h  aurreproz_raw.cc  aurreproz_raw.h  automata.cc  automata.h  bereiz_etq.h  dat_orok.h  file_mng_raw.cc  file_mng_raw.h  status_raw.cc  status_raw.h  token_raw.cc  token_raw.h  tokenizatzaile.h  zuriune_token.cc  zuriune_token.h
cg3manager/: cgconv.cc  cgmanager.cc  cgmanager.h  euparole.cc  euparole.h
eustagger/trunk/eustagger/: INSTRUCCIONES  IRAKURRI  Makefile.in  configure.ac  eustagger_lite.cc  eustagger_raw.cc  proba_eustagger.txt  proba_eustagger.txt.etiketatua3
eustagger/trunk/eustagger/analisitresnak/: formatua.h  prozesatucg3_raw.cc  prozesatumorf_raw.cc  prozesatuseg_raw.cc
eustagger/trunk/eustagger/aurreprozesua_raw/: Makefile.in  an_lex_raw.cc  an_lex_raw.h  aurreproz_raw.cc  aurreproz_raw.h  automata.cc  automata.h  bereiz_etq.h  dat_orok.h  file_mng_raw.cc  file_mng_raw.h  status_raw.cc  token_raw.cc  token_raw.h  tokenizatzaile.h  zuriune_token.cc  zuriune_token.h
eustagger/trunk/eustagger/cg3manager/: Makefile.in  cgconv.cc  cgmanager.cc  cgmanager.h  euparole.cc  euparole.h
eustagger/trunk/eustagger/habil/: AN.cc  FORMA.cc  HAT.cc  HAT.h  HAT_class.cc  HAT_class.h  HAT_lag.cc  HITZ.cc  IM.h  IM_info.cc  IM_info.h  LEMA.cc  LEMA.h  Makefile.in  Makefile.orig  ald_orok.h  bikote.h  hat_karga.l  hat_karga.output  hat_karga.tab.hh  hat_karga.y  haul_bilaketa.cc  int_bikote.cc
eustagger/trunk/eustagger/morfologia/: Makefile.in  anabihurtzailea.cc  anabihurtzailea.h  analizatzailea.cc  azterzen.c  bool.h  defek_jk.h  externs_k.h  filtro.h  fomamorf.cc  fomamorf.h  fs_lag.c  fun_def.c  getenvvar.cc  klaseak.h  maiztasun_handikoak.cc  maiztasun_handikoak.h  taipak.h  tamaino.h  zerhitz.c
eustagger/trunk/eustagger/morfosintaxia_raw/: Makefile.in  ana2morfsar.cc  ana2morfsar.h  ana2morfsar.l  ana2morfsar.output  ana2morfsar.tab.hh  ana2morfsar.y  constants.h  constants_decl.h  lema_aldaera.cc  morfosintaxia_raw.cc  morfosraw.cc  morfsar2raw.h  morfsarFormatu.cc  morfsarFormatu.h  prolog2raw.cc  prolog2raw.h
eustagger/trunk/eustagger/var/morfologia/: xuxen-IM_foma_berez.fst.4.4.9
habil/: AN.cc  AN.h  FORMA.cc  FORMA.h  HAT.cc  HAT.h  HAT_class.cc  HAT_class.h  HAT_kom.h  HAT_lag.cc  HITZ.cc  HITZ.h  IM.h  IM_info.cc  IM_info.h  LEMA.cc  LEMA.h  Makefile.in  ald_orok.h  bikote.h  hat_karga.l  hat_karga.output  hat_karga.y  haul_bilaketa.cc  int_bikote.cc  int_bikote.h  ordena.h
morfologia/: anabihurtzailea.cc  anabihurtzailea.h  analizatzailea.cc  analizatzailea.h  azterzen.c  bool.h  defek_jk.h  externs.h  externs_e.h  externs_k.h  filtro.h  fomamorf.cc  fomamorf.h  fs_lag.c  fun_def.c  getenvvar.cc  getenvvar.h  hizkia.h  irakaut.c  kendu_marka_lex.cc  klaseak.h  maiztasun_handikoak.cc  maiztasun_handikoak.h  taipak.h  tamaino.h  zerhitz.c
morfosintaxia_raw/: Makefile.in  SWI-cpp.h  ana2morfsar.cc  ana2morfsar.h  ana2morfsar.output  ana2morfsar.tab.hh  ana2morfsar.y  constants.h  constants_decl.h  lema_aldaera.cc  lema_aldaera.h  morfosintaxia_raw.cc  morfosraw.cc  morfosraw.h  morfsar2raw.cc  morfsar2raw.h  morfsarFormatu.cc  morfsarFormatu.h  prolog2raw.cc  prolog2raw.h
var/aurreprozesua/: aurrean_lex.auto
